<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.savch_andgit.auth.presentation.ui.AuthFragment"
        android:label="@string/auth_title">
        <action
            android:id="@+id/action_auth_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_auth_to_weather"
            app:destination="@id/weatherFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.savch_andgit.auth.presentation.ui.RegisterFragment"
        android:label="@string/register_title">
        <action
            android:id="@+id/action_register_to_auth"
            app:destination="@id/authFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.savch_andgit.weather.presentation.ui.WeatherFragment"
        android:label="@string/weather_title" />

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.savch_andgit.calculator.presentation.ui.CalculatorFragment"
        android:label="@string/calculator_title" />

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.savch_andgit.list.presentation.ui.ListFragment"
        android:label="@string/list_title" />
</navigation>
