<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/weather_spacing_medium">

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/music_search_hint"
        android:singleLine="true"
        android:maxLines="1"
        android:imeOptions="actionSearch"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_loading"
        android:visibility="gone"
        android:paddingTop="@dimen/weather_spacing_small" />

    <Button
        android:id="@+id/btnOpenFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_favorites"
        android:paddingTop="@dimen/weather_spacing_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:nestedScrollingEnabled="false" />
</LinearLayout>
